--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caesar Cipher</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="Css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
@@ -61,7 +61,7 @@
         </div>        
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="Js/bootstrap.min.js"></script>
 <script>
     // Caesar Cipher Logic
     function caesarCipher(text, shift, decrypt = false) {
